# mycraft

./: CMakeLists.txt  readme.md
assets/shaders/: fragment.glsl  id_fragment.glsl  id_vertex.glsl  vertex.glsl
include/: block.h  camera.h  chunk.h  cube.h  engine.h  error.h  idbuffer.h  noise.h  platform.h  shader.h  terrain.h  texture.h  utils.h  window.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: chunk.cpp  engine.cpp  idbuffer.cpp  main.cpp  platform.cpp  shader.cpp  terrain.cpp  texture.cpp  window.cpp
